--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "webpack-bundle-analyser": "^1.4.0",
     "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^5.1.4",
-    "webpack-dev-server": "^5.1.0"
+    "webpack-dev-server": "^5.1.0",
+    "webpack-merge": "^6.0.1"
   }
 }
